--- a/TODO
+++ b/TODO
@@ -3,5 +3,4 @@
 * Make theme translatable
 * Lists need outside styles
 * Add "seen" icon to summary (fa-eye)
-* Inline theming styles
-* Configurable data formats
+* Configurable date formats
